@@ -1,3 +1,7 @@
+2006-06-21 Dave Holland <dave@biff.org.uk>
+
+- http_proxy environment variable support.
+
 2006-06-21 Mathieu Blondel <mblondel@users.sourceforge.net>
 
 - Fixed bug that prevented from adding a new article.
